--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-preset-react-app": "^10.0.1",
+    "framer-motion": "^12.23.12",
     "gh-pages": "^6.1.1",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
